--- a/download-ui.html
+++ b/download-ui.html
@@ -1,127 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Download Options – SoundMuseAI</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
   <style>
-    /* Modal styles */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 10;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.5);
+    body {
+      background: url('Background-aurora.png') no-repeat center center fixed;
+      background-size: cover;
+      color: #f4f4f8;
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
-    .modal-content {
-      background-color: #f4f7f9;
-      margin: 10% auto;
-      padding: 2rem;
-      border: 1px solid #ccc;
-      width: 80%;
-      max-width: 500px;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    /* keep page content clear of fixed toolbar */
+    main.page {
+      margin-left: 110px; /* ~100px toolbar + breathing room */
+      padding: 2rem 2rem 4rem;
+    }
+
+    h1 { margin: 0 0 1rem; text-shadow: 0 1px 2px rgba(0,0,0,.55); }
+    p  { max-width: 56rem; }
+
+    .btn {
+      display: inline-block;
+      padding: .5rem .9rem;
+      border-radius: 8px;
+      border: 1px solid rgba(255,255,255,.2);
+      background: rgba(0,0,0,.35);
+      color: #fff;
+      cursor: pointer;
+    }
+    .btn:hover { filter: brightness(1.1); }
+
+    /* ---------- Modal (popup) ---------- */
+    .dl-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.55);
+      display: none;               /* toggled by JS */
+      align-items: flex-start;
+      justify-content: center;
+      padding-top: 3.5rem;
+      z-index: 2000;
+    }
+    .dl-overlay.show { display: flex; }
+
+    .dl-modal {
+      width: min(760px, 96vw);
+      background: rgba(0,0,0,.6);
+      border: 1px solid rgba(255,255,255,.08);
+      border-radius: 14px;
+      box-shadow: 0 10px 26px rgba(0,0,0,.35);
+      padding: 1.25rem 1.25rem 1rem;
       position: relative;
     }
 
-    .close {
-      color: #888;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
+    .dl-close {
       position: absolute;
-      right: 16px;
-      top: 8px;
-      cursor: pointer;
-    }
-
-    .close:hover {
-      color: #444;
-    }
-
-    .download-buttons {
-      margin-top: 1rem;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-
-    .download-buttons button {
-      padding: 0.75rem 1.5rem;
+      top: .5rem; right: .6rem;
+      background: transparent;
       border: none;
-      background: linear-gradient(90deg, #a7c5bd, #d5e3dc);
-      color: #333;
-      font-weight: bold;
-      border-radius: 8px;
+      font-size: 22px;
+      color: #fff;
       cursor: pointer;
-      transition: all 0.3s ease;
+      line-height: 1;
     }
 
-    .download-buttons button:hover {
-      background: linear-gradient(90deg, #88a9a3, #c3d6ce);
+    .mockup-wrap {
+      margin-top: .5rem;
+      background: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 12px;
+      padding: .75rem;
     }
-
-    .download-mockup {
-      text-align: center;
-      margin: 1.5rem 0;
-    }
-
-    .download-mockup img {
-      max-width: 100%;
+    .mockup-wrap img {
+      display: block;
+      width: 100%;
       height: auto;
       border-radius: 10px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.15);
     }
 
-    body {
-      background-image: url('Background-aurora.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: center;
-      color: var(--text-color);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
+    /* Quick actions below (not in modal) */
+    .quick-actions {
+      margin-top: 1.25rem;
+      max-width: 760px;
     }
+    .quick-actions .qa-note {
+      font-size: .9rem; color: #cfcfe6; opacity: .9; margin: .25rem 0 .75rem;
+    }
+    .quick-actions .qa-row {
+      display: grid;
+      gap: .6rem;
+    }
+    .qa-row .qa-btn {
+      background: rgba(214, 255, 245, 0.12);
+      border: 1px solid rgba(255,255,255,.15);
+      padding: .65rem .9rem;
+      border-radius: 10px;
+      text-align: center;
+      cursor: pointer;
+      color: #eef8ff;
+    }
+    .qa-row .qa-btn:hover { filter: brightness(1.08); }
 
-    header {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 1rem;
-      color: white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      backdrop-filter: blur(8px);
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 1.5rem;
-    }
-
-    /* Glow around starling in dark mode */
-    @media (prefers-color-scheme: dark) {
-      header {
-        box-shadow: 0 0 12px rgba(173, 216, 230, 0.6);
-      }
-    }
+    /* larger tap target for the "More" button */
+    .more-btn { background:none; border:none; font-size:24px; cursor:pointer; margin:10px 0; color: inherit; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>🎧 SoundMuseAI</h1>
-  </header>
 
-  <!-- ✅ Sidebar toolbar block -->
-  <div class="sidebar">
-    <!-- ✅ Icon images with links -->
+  <!-- ✅ Shared toolbar (matches homepage) -->
+  <div class="toolbar">
+    <a href="profile.html" class="sidebar-user" title="User Profile">
+      <img src="starling-head.png" alt="SoundMuse Profile" class="profile-pic" />
+      <span class="sidebar-username">SoundMuse</span>
+    </a>
+
     <a href="index.html" title="Home"><img src="icons/home.png" alt="Home" class="icon" /></a>
     <a href="uploads.html" title="My Uploads"><img src="icons/upload.png" alt="Uploads" class="icon" /></a>
     <a href="edit-score.html" title="Music Score Editor"><img src="icons/score.png" alt="Music Score Editor" class="icon" /></a>
@@ -129,56 +125,95 @@
     <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
     <a href="download-ui.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
 
-    <!-- “...” placeholder unchanged -->
-    <div style="margin: 12px 0;">...</div>
+    <!-- “More” -->
+    <button id="more-btn" class="more-btn" aria-expanded="false" title="More">⋯</button>
+    <nav id="more-menu" class="popup" role="menu" aria-hidden="true">
+      <ul>
+        <li><a href="more.html">More Options</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="saved-chats.html">Saved Chats</a></li>
+        <li><a href="saved-lyrics.html">Saved Lyrics</a></li>
+        <li><a href="edit-score.html">Music Score Editor</a></li>
+        <li><a href="download-ui.html">Download</a></li>
+      </ul>
+    </nav>
 
-    <!-- Keep theme toggle exactly as-is -->
-    <button id="theme-toggle" title="Toggle Light/Dark Mode">🌓</button>
+    <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
   </div>
 
-  <main style="padding: 2rem;">
-    <h2>Download Options</h2>
-    <p>Click the button below to preview download interface:</p>
-    <button id="openModal">Open Download UI</button>
+  <!-- 📄 Page content -->
+  <main class="page">
+    <h1>Download Options</h1>
+    <p>Click the button below to preview the download interface:</p>
+    <button id="openDl" class="btn">Open Download UI</button>
 
-    <div id="downloadModal" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>Download Options</h2>
-        <p>Select what you'd like to download:</p>
-
-        <div class="download-mockup">
-          <img src="Download-mockup.png" alt="Download options mock-up">
-          <p>This image is a placeholder to show what a future download interface could look like.</p>
-        </div>
-
-        <div class="download-buttons">
-          <button>Download Chat</button>
-          <button>Download Lyrics</button>
-          <button>Download Spectrograph</button>
-        </div>
+    <!-- Quick actions OUTSIDE the modal (so the popup only shows the top card) -->
+    <section class="quick-actions" aria-label="Quick actions (mock)">
+      <p class="qa-note">This area is a placeholder for future one-click exports.</p>
+      <div class="qa-row">
+        <button class="qa-btn">Download Chat</button>
+        <button class="qa-btn">Download Lyrics</button>
+        <button class="qa-btn">Download Spectrogram</button>
       </div>
-    </div>
+    </section>
   </main>
 
+  <!-- 🪟 Modal: only shows the top mockup card -->
+  <div id="dlOverlay" class="dl-overlay" aria-hidden="true">
+    <div class="dl-modal" role="dialog" aria-modal="true" aria-labelledby="dlTitle">
+      <button id="closeDl" class="dl-close" aria-label="Close">✕</button>
+      <h2 id="dlTitle">Download Options</h2>
+      <p>Select what you'd like to download:</p>
+
+      <div class="mockup-wrap">
+        <!-- Use the exact case of your asset -->
+        <img src="Download-mockup.png" alt="Download UI mockup (checkboxes + big download button only)">
+      </div>
+    </div>
+  </div>
+
+  <!-- 🔦 Theme + More + Modal JS -->
   <script>
-    const modal = document.getElementById("downloadModal");
-    const btn = document.getElementById("openModal");
-    const span = document.getElementsByClassName("close")[0];
+    (function () {
+      // Theme
+      const body = document.body;
+      if (localStorage.getItem('theme') === 'dark') body.classList.add('dark-theme');
+      const t = document.getElementById('theme-toggle');
+      if (t) t.addEventListener('click', () => {
+        body.classList.toggle('dark-theme');
+        localStorage.setItem('theme', body.classList.contains('dark-theme') ? 'dark' : 'light');
+      });
 
-    btn.onclick = function () {
-      modal.style.display = "block";
-    };
-
-    span.onclick = function () {
-      modal.style.display = "none";
-    };
-
-    window.onclick = function (event) {
-      if (event.target === modal) {
-        modal.style.display = "none";
+      // More menu
+      const btn  = document.getElementById('more-btn');
+      const menu = document.getElementById('more-menu');
+      if (btn && menu) {
+        const openMenu = () => { menu.style.display='block'; btn.setAttribute('aria-expanded','true'); menu.setAttribute('aria-hidden','false'); };
+        const closeMenu = () => { menu.style.display='none';  btn.setAttribute('aria-expanded','false'); menu.setAttribute('aria-hidden','true'); };
+        btn.addEventListener('click', (e) => { e.stopPropagation(); (menu.style.display==='block') ? closeMenu() : openMenu(); });
+        document.addEventListener('click', (e) => { if (menu.style.display==='block' && !menu.contains(e.target) && e.target!==btn) closeMenu(); });
+        document.addEventListener('keydown', (e) => { if (e.key==='Escape') closeMenu(); });
       }
-    };
+
+      // Modal
+      const overlay = document.getElementById('dlOverlay');
+      const open    = document.getElementById('openDl');
+      const close   = document.getElementById('closeDl');
+
+      function showModal() {
+        overlay.classList.add('show');
+        overlay.setAttribute('aria-hidden','false');
+      }
+      function hideModal() {
+        overlay.classList.remove('show');
+        overlay.setAttribute('aria-hidden','true');
+      }
+
+      open.addEventListener('click', showModal);
+      close.addEventListener('click', hideModal);
+      overlay.addEventListener('click', (e) => { if (e.target === overlay) hideModal(); });
+      document.addEventListener('keydown', (e) => { if (e.key === 'Escape') hideModal(); });
+    })();
   </script>
 </body>
 </html>
