--- a/saved-lyrics.html
+++ b/saved-lyrics.html
@@ -17,12 +17,9 @@
     }
 
     /* Keep content clear of the fixed toolbar */
-    .page {
-      margin-left: 110px;               /* ~90px toolbar + breathing */
-      padding: 2rem 2rem 3rem;
-    }
+    .page { margin-left: 110px; padding: 2rem 2rem 3rem; }
 
-    /* Match homepage toolbar icon behavior (no global overrides) */
+    /* Light touch so we don't override your global styles */
     .toolbar a { margin: 10px 0; }
     .toolbar img.icon {
       width: 28px; height: 28px;
@@ -30,15 +27,11 @@
     }
     .toolbar img.icon:hover { transform: scale(1.2); }
 
-    h1, h2, h3 {
-      margin: 0 0 0.75rem;
-      text-shadow: 0 1px 2px rgba(0,0,0,.55);
-    }
-
+    h1, h2, h3 { margin: 0 0 0.75rem; text-shadow: 0 1px 2px rgba(0,0,0,.55); }
     .hint { color: #dcdcef; opacity: .9; }
 
     /* Cards */
-    .lyric-entry {
+    .lyric-entry{
       background: rgba(0,0,0,0.55);
       border: 1px solid rgba(255,255,255,0.08);
       border-radius: 12px;
@@ -46,88 +39,30 @@
       margin-bottom: 1rem;
       box-shadow: 0 4px 14px rgba(0,0,0,0.25);
     }
-
-    .row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-      flex-wrap: wrap;
+    .row{
+      display:flex; align-items:center; justify-content:space-between;
+      gap:1rem; flex-wrap:wrap;
     }
-
     .file-name { font-weight: 600; }
 
-    .btn {
-      background: #333;
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      padding: .45rem .75rem;
-      font-size: .92rem;
-      cursor: pointer;
-      margin-left: .5rem;
+    .btn{
+      background:#333; color:#fff; border:none; border-radius:8px;
+      padding:.45rem .75rem; font-size:.92rem; cursor:pointer; margin-left:.5rem;
     }
-    .btn:hover { background: #555; }
+    .btn:hover{ background:#555; }
 
-    .menu-btn {
-      background: transparent;
-      border: none;
-      color: #f3f3f8;
-      font-size: 1.2rem;
-      cursor: pointer;
-      padding: .25rem .4rem;
-      border-radius: 6px;
-    }
-    .menu-btn:hover { background: rgba(255,255,255,0.08); }
-
-    .dropdown {
-      position: absolute;
-      right: 0;
-      top: 2.2rem;
-      background: #1e2030;
-      color: #fff;
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 8px;
-      padding: .35rem;
-      box-shadow: 0 10px 24px rgba(0,0,0,.35);
-      min-width: 160px;
-      z-index: 10;
-    }
-    .hidden { display: none; }
-    .dropdown button {
-      display: block;
-      width: 100%;
-      background: transparent;
-      border: none;
-      color: #fff;
-      text-align: left;
-      padding: .5rem .6rem;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: .92rem;
-    }
-    .dropdown button:hover { background: rgba(255,255,255,0.08); }
-
-    pre.lyric-snippet {
-      margin: .6rem 0 0;
-      padding: .75rem .9rem;
+    pre.lyric-snippet{
+      margin:.6rem 0 0; padding:.75rem .9rem;
       background: rgba(255,255,255,.06);
-      border: 1px solid rgba(255,255,255,.08);
-      border-radius: 8px;
-      color: #eef0ff;
-      overflow-x: auto;
+      border:1px solid rgba(255,255,255,.08);
+      border-radius:8px; color:#eef0ff; overflow-x:auto;
     }
 
-    .sort-options {
-      display: flex;
-      gap: 1.25rem;
-      align-items: center;
-      margin: .5rem 0 1.25rem;
-    }
-    .sort-options label { display: flex; gap: .5rem; align-items: center; }
+    .sort-options{ display:flex; gap:1.25rem; align-items:center; margin:.5rem 0 1.25rem; }
+    .sort-options label{ display:flex; gap:.5rem; align-items:center; }
 
-    @media (max-width: 1024px) {
-      .page { margin-left: 110px; padding-bottom: 140px; } /* keep clear of music bar */
+    @media (max-width:1024px){
+      .page{ margin-left:110px; padding-bottom:140px; }
     }
   </style>
 </head>
@@ -157,88 +92,89 @@
     <p class="hint">Pin up to 5 files you're actively working on. Sort the rest below.</p>
 
     <!-- 📌 Pinned -->
-<h3>📌 Pinned Lyrics (Max 5)</h3>
+    <h3>📌 Pinned Lyrics (Max 5)</h3>
 
-<div class="lyric-entry" style="position:relative;">
-  <div class="row">
-    <span class="file-name">🎶 We-Build-Together</span>
+    <div class="lyric-entry">
+      <div class="row">
+        <span class="file-name">🎶 We-Build-Together</span>
 
-    <!-- right-side: date + menu -->
-    <div style="margin-left:auto; display:flex; align-items:center; gap:.5rem; position:relative;">
-      <span class="chat-date">Saved: 3 Sep 2025</span>
-      <button class="menu-btn menu">⋮</button>
-      <div class="dropdown hidden">
-        <button>📍 Unpin</button>
-        <button>📁 Archive</button>
-        <button>🗑️ Delete</button>
-        <button>⬇️ Download</button>
+        <div style="margin-left:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap;">
+          <span class="chat-date">Saved: 3 Sep 2025</span>
+          <div>
+            <button class="btn">📍 Unpin</button>
+            <button class="btn">👀 View</button>
+            <button class="btn">📁 Archive</button>
+            <button class="btn">🗑️ Delete</button>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
 
-  <pre class="lyric-snippet">[Intro]
+      <pre class="lyric-snippet">[Intro]
 [Act 1 – Anthem Rise] Harmonic shimmer with marching tempo...</pre>
-</div>
+    </div>
 
     <!-- 📂 Others -->
-   <h3>📂 All Other Lyrics</h3>
-<div class="sort-options">
-  <label><input type="radio" name="sort" checked /> Sort by File Type</label>
-  <label><input type="radio" name="sort" /> Sort A–Z</label>
-</div>
+    <h3>📂 All Other Lyrics</h3>
+    <div class="sort-options">
+      <label><input type="radio" name="sort" checked /> Sort by File Type</label>
+      <label><input type="radio" name="sort" /> Sort A–Z</label>
+    </div>
 
-<!-- 1) wentforgold.midi — 7 Sep 2025 -->
-<div class="lyric-entry">
-  <div class="row">
-    <span class="file-name">🎼 wentforgold</span>
+    <!-- 1) wentforgold.midi — 7 Sep 2025 -->
+    <div class="lyric-entry">
+      <div class="row">
+        <span class="file-name">🎼 wentforgold</span>
 
-    <div style="margin-left:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap;">
-      <span class="chat-date">Saved: 7 Sep 2025</span>
-      <div>
-        <button class="btn">👀 View</button>
-        <button class="btn">📁 Archive</button>
-        <button class="btn">🗑️ Delete</button>
+        <div style="margin-left:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap;">
+          <span class="chat-date">Saved: 7 Sep 2025</span>
+          <div>
+            <button class="btn">📍 Pin</button>
+            <button class="btn">👀 View</button>
+            <button class="btn">📁 Archive</button>
+            <button class="btn">🗑️ Delete</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<!-- 2) mysterymuse.MP3 — 22 Aug 2025 -->
-<div class="lyric-entry">
-  <div class="row">
-    <span class="file-name">🎶 mysterymuse</span>
+    <!-- 2) mysterymuse.MP3 — 22 Aug 2025 -->
+    <div class="lyric-entry">
+      <div class="row">
+        <span class="file-name">🎶 mysterymuse</span>
 
-    <div style="margin-left:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap;">
-      <span class="chat-date">Saved: 22 Aug 2025</span>
-      <div>
-        <button class="btn">👀 View</button>
-        <button class="btn">📁 Archive</button>
-        <button class="btn">🗑️ Delete</button>
+        <div style="margin-left:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap;">
+          <span class="chat-date">Saved: 22 Aug 2025</span>
+          <div>
+            <button class="btn">📍 Pin</button>
+            <button class="btn">👀 View</button>
+            <button class="btn">📁 Archive</button>
+            <button class="btn">🗑️ Delete</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<!-- 3) demo-neverknowuntilyoutry.wav — 15 Aug 2025 -->
-<div class="lyric-entry">
-  <div class="row">
-    <span class="file-name">🎵 demo-neverknowuntilyoutry</span>
+    <!-- 3) demo-neverknowuntilyoutry.wav — 15 Aug 2025 -->
+    <div class="lyric-entry">
+      <div class="row">
+        <span class="file-name">🎵 demo-neverknowuntilyoutry</span>
 
-    <div style="margin-left:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap;">
-      <span class="chat-date">Saved: 15 Aug 2025</span>
-      <div>
-        <button class="btn">👀 View</button>
-        <button class="btn">📁 Archive</button>
-        <button class="btn">🗑️ Delete</button>
+        <div style="margin-left:auto; display:flex; align-items:center; gap:.75rem; flex-wrap:wrap;">
+          <span class="chat-date">Saved: 15 Aug 2025</span>
+          <div>
+            <button class="btn">📍 Pin</button>
+            <button class="btn">👀 View</button>
+            <button class="btn">📁 Archive</button>
+            <button class="btn">🗑️ Delete</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-</main>
+  </main>
 
-  <!-- 🔦 Theme toggle (same as homepage) -->
+  <!-- 🔦 Theme toggle -->
   <script>
-    (function() {
+    (function () {
       const body = document.body;
       if (localStorage.getItem('theme') === 'dark') body.classList.add('dark-theme');
       const t = document.getElementById('theme-toggle');
@@ -247,14 +183,6 @@
         localStorage.setItem('theme', body.classList.contains('dark-theme') ? 'dark' : 'light');
       });
     })();
-
-    // simple dropdown toggle for pinned menu
-    document.querySelectorAll('.menu').forEach(btn => {
-      btn.addEventListener('click', (e) => {
-        const dd = e.currentTarget.nextElementSibling;
-        dd.classList.toggle('hidden');
-      });
-    });
   </script>
 </body>
 </html>
