--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
   <a href="saved-chats.html" title="Saved Chats"><img src="icons/chat.png" alt="Saved Chats" class="icon" /></a>
   <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
   <a href="download-ui.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
-
-  <!-- “…” placeholder unchanged -->
-  <div style="margin: 12px 0;">...</div>
+  <a href="more.html" class="more-link" title="More options" aria-label="More options">⋯</a>
 
   <!-- 🔦 Keep theme toggle exactly as-is -->
   <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
