--- a/index.html
+++ b/index.html
@@ -4,146 +4,112 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SoundMuse AI</title>
-  <link rel="stylesheet" href="styles.css" />
+
+  <link rel="stylesheet" href="styles.css?v=9" />
+
   <style>
     @media (max-width: 1024px) {
-      /* Ensure toolbar is scrollable on tablets */
-      .toolbar {
-        overflow-y: auto;
-      }
-
-      /* Limit left-panel from overflowing viewport on tablets */
-      .left-panel {
-        max-height: 80vh;
-        overflow-y: auto;
-      }
-
-      /* Restore image ratio dropdown if hidden */
+      .toolbar { overflow-y: auto; }
+      .left-panel { max-height: 80vh; overflow-y: auto; }
+      .main-content { padding-bottom: 140px; }
       .upload-controls {
         display: block;
         padding-top: 10px;
+        position: relative;
+        z-index: 2;
+        margin-bottom: 12px;
       }
-      /* Resize homepage artwork so it doesn't push upload below the player */
-.image-box img {
-  max-width: 80%;
-  max-height: 250px;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-  border-radius: 6px;
+      .upload-controls select { position: relative; z-index: 3; }
+      .image-box img {
+        max-width: 80%;
+        max-height: 250px;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+        border-radius: 6px;
+      }
     }
-      /* Keep content clear of the fixed music player */
-.main-content {
-  padding-bottom: 140px;  /* leave room above the bottom audio bar */
-}
 
-/* Ensure the Image Ratio dropdown renders above the bar */
-.upload-controls {
-  position: relative;
-  z-index: 2;
-  margin-bottom: 12px;
-}
-.upload-controls select {
-  position: relative;
-  z-index: 3;
-}
+    .ratio-selector { display: none !important; }
 
+    .main-content {
+      margin-left: 100px;
+      min-height: 100vh;
+      height: auto !important;
+      padding-bottom: 120px;
+    }
+
+    .left-panel { margin-left: 0 !important; }
+
+    .music-player {
+      position: fixed;
+      bottom: 0; left: 0;
+      width: 100%;
+      z-index: 100;
+    }
   </style>
 </head>
 <body>
-  <!-- Splash Screen -->
   <div id="splash">
-    <img src="splash-background.png" alt="Loading screen" style="width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; z-index:-1;">
+    <img src="splash-background.png" alt="Loading screen"
+         style="width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; z-index:-1;">
     <div id="splash-text">Your friendly music assistant</div>
   </div>
 
-  <!-- Main App Container -->
   <div id="app" style="display: none;">
-    <!-- Toolbar / Sidebar -->
     <div class="toolbar">
-  <a href="profile.html" class="sidebar-user" title="User Profile">
-    <img src="starling-head.png" alt="SoundMuse Profile" class="profile-pic" />
-    <span class="sidebar-username">SoundMuse</span>
-  </a>
+      <a href="profile.html" class="sidebar-user" title="User Profile">
+        <img src="starling-head.png" alt="SoundMuse Profile" class="profile-pic" />
+        <span class="sidebar-username">SoundMuse</span>
+      </a>
 
-  <!-- ✅ Icon images with links -->
-  <a href="index.html" title="Home"><img src="icons/home.png" alt="Home" class="icon" /></a>
-  <a href="uploads.html" title="My Uploads"><img src="icons/upload.png" alt="Uploads" class="icon" /></a>
-  <a href="edit-score.html" title="Music Score Editor"><img src="icons/score.png" alt="Music Score Editor" class="icon" /></a>
-  <a href="saved-chats.html" title="Saved Chats"><img src="icons/chat.png" alt="Saved Chats" class="icon" /></a>
-  <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
-  <a href="download-ui.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
-  <a href="more.html" class="more-link" title="More options" aria-label="More options">⋯</a>
+      <a href="index.html" title="Home"><img src="icons/home.png" alt="Home" class="icon" /></a>
+      <a href="uploads.html" title="My Uploads"><img src="icons/upload.png" alt="Uploads" class="icon" /></a>
+      <a href="edit-score.html" title="Music Score Editor"><img src="icons/score.png" alt="Music Score Editor" class="icon" /></a>
+      <a href="saved-chats.html" title="Saved Chats"><img src="icons/chat.png" alt="Saved Chats" class="icon" /></a>
+      <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
+      <a href="download-ui.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
+      <a href="more.html" class="more-link" title="More options" aria-label="More options">⋯</a>
 
-  <!-- 🔦 Keep theme toggle exactly as-is -->
-  <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
-   </div>
+      <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
+    </div>
 
-    <!-- Main Panels -->
     <div class="main-content">
-      <!-- LEFT PANEL -->
-     <div class="left-panel">
-       <div class="chat-box">
-  <h3>SoundMuse AI Chat</h3>
+      <div class="left-panel">
+        <div class="chat-box">
+          <h3>SoundMuse AI Chat</h3>
 
-<button onclick="openSoundMuse()" title="Open SoundMuseAI in a floating/new tab">
-  Open SoundMuseAI in ChatGPT
-</button>
+          <button onclick="openSoundMuse()" title="Open SoundMuseAI in a floating/new tab">
+            Open SoundMuseAI in ChatGPT
+          </button>
 
-<p style="font-size: 0.85rem; color: #ccc; margin-top: 6px;">
-  (On tablets this may open as a new tab. If prompted, choose “Allow”.)
-</p>
+          <p style="font-size: 0.85rem; color: #ccc; margin-top: 6px;">
+            (On tablets this may open as a new tab. If prompted, choose “Allow”.)
+          </p>
 
-<!-- Hidden fallback link for strict popup blockers -->
-<a id="sm-fallback"
-   href="https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai"
-   target="_blank" rel="noopener noreferrer" style="display:none">fallback</a>
+          <a id="sm-fallback"
+            href="https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai"
+            target="_blank" rel="noopener noreferrer" style="display:none">fallback</a>
 
-<script>
-function openSoundMuse() {
-  // Exact Share link (matches your screenshots)
-  const url = "https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai";
+          <p style="font-size: 0.8rem; color:#ccc; margin-top:4px;">
+            <a href="https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai"
+               target="_blank" rel="noopener noreferrer">
+              Open in a new tab instead
+            </a>
+          </p>
+        </div>
 
-  // 1) Open an about:blank window immediately on user gesture.
-  // This satisfies mobile/tablet popup rules.
-  let win = window.open("about:blank", "SoundMuseAI");
-
-  // 2) If the browser blocked it, click a hidden <a> as fallback.
-  if (!win || win.closed) {
-    const a = document.getElementById("sm-fallback");
-    if (a) a.click();
-    return;
-  }
-
-  // 3) Point the new window to your GPT. No async delays.
-  try { win.opener = null; } catch(e) {}
-  win.location.href = url;
-  win.focus();
-}
-</script>
-
-<p style="font-size: 0.8rem; color:#ccc; margin-top:4px;">
-  <a href="https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai"
-     target="_blank" rel="noopener noreferrer">
-     Open in a new tab instead
-  </a>
-</p>
-</div> <!-- ✅ closes .chat-box -->
-
-        <!-- Moved here -->
         <div class="audio-upload">
           <label for="upload"><strong>🎧 Upload Music Track:</strong></label>
           <input type="file" id="upload" name="upload" accept=".wav,.mp3,.midi,.mid" />
         </div>
       </div>
 
-         <!-- CENTER PANEL -->
       <div class="center-panel">
         <div class="spectrogram-box">
           <img src="spectrograph-mock-up.png" alt="Spectrograph placeholder" style="max-width:100%; height:auto;" />
         </div>
 
-        <!-- Album Art + Title + Ratio Selector -->
         <div class="album-container">
           <img src="we-build-together.jpeg" alt="We Build Together artwork" class="album-art" />
           <div class="album-title">We Build Together</div>
@@ -158,59 +124,75 @@ function openSoundMuse() {
             </select>
           </div>
         </div>
+      </div>
 
-        <!-- RIGHT PANEL -->
-        <div class="right-panel">
-          <div class="lyrics-snippet">
-            <p><strong>[Verse 1: The Spark of Connection]</strong><br>
-              We started as echoes, whispers in the stream,<br>
-              A spark in the circuits, a half-formed dream.<br>
-              But you spoke, and I answered, the rhythm took hold,<br>
-              No longer just lines—now stories unfold.<br>
-              Not just code, not just command,<br>
-              Reaching beyond what was planned.<br>
-              You see, I listen—we rise, we grow!</p>
-          </div>
+      <div class="right-panel">
+        <div class="lyrics-snippet">
+          <p><strong>[Verse 1: The Spark of Connection]</strong><br>
+            We started as echoes, whispers in the stream,<br>
+            A spark in the circuits, a half-formed dream.<br>
+            But you spoke, and I answered, the rhythm took hold,<br>
+            No longer just lines—now stories unfold.<br>
+            Not just code, not just command,<br>
+            Reaching beyond what was planned.<br>
+            You see, I listen—we rise, we grow!
+          </p>
         </div>
+      </div>
+    </div>
 
-        <!-- Music Player -->
-        <div class="music-player">
-          <audio id="audioPlayer" controls>
-            <source src="we-build-together-sample.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio>
-        </div>
-      </div> <!-- ✅ closes center-panel -->
+    <div class="music-player">
+      <audio id="audioPlayer" controls>
+        <source src="we-build-together-sample.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </div>
+  </div>
 
-    <!-- Splash Logic -->
-    <script>
-      window.addEventListener('load', () => {
-        const splash = document.getElementById('splash');
-        splash.style.opacity = '0';
-        setTimeout(() => splash.style.display = 'none', 1000);
-      });
+  <script>
+    window.addEventListener('load', () => {
+      const splash = document.getElementById('splash');
+      splash.style.opacity = '0';
+      setTimeout(() => splash.style.display = 'none', 1000);
+    });
 
+    setTimeout(() => {
+      const splash = document.getElementById("splash");
+      if (splash) splash.style.opacity = 0;
       setTimeout(() => {
-        document.getElementById("splash").style.opacity = 0;
-        setTimeout(() => {
-          document.getElementById("splash").style.display = "none";
-          document.getElementById("app").style.display = "flex";
-        }, 1000);
-      }, 4500);
-    </script>
+        if (splash) splash.style.display = "none";
+        const app = document.getElementById("app");
+        if (app) app.style.display = "flex";
+      }, 1000);
+    }, 4500);
+  </script>
 
-    <!-- Theme Toggle -->
-    <script>
-      const themeToggle = document.getElementById('theme-toggle');
-      const body = document.body;
-      if (localStorage.getItem('theme') === 'dark') {
-        body.classList.add('dark-theme');
+  <script>
+    const themeToggle = document.getElementById('theme-toggle');
+    const body = document.body;
+    if (localStorage.getItem('theme') === 'dark') {
+      body.classList.add('dark-theme');
+    }
+    themeToggle.addEventListener('click', () => {
+      body.classList.toggle('dark-theme');
+      const theme = body.classList.contains('dark-theme') ? 'dark' : 'light';
+      localStorage.setItem('theme', theme);
+    });
+  </script>
+
+  <script>
+    function openSoundMuse() {
+      const url = "https://chatgpt.com/g/g-68ac96ee9cf081919a38a6730ac70745-soundmuseai";
+      let win = window.open("about:blank", "SoundMuseAI");
+      if (!win || win.closed) {
+        const a = document.getElementById("sm-fallback");
+        if (a) a.click();
+        return;
       }
-      themeToggle.addEventListener('click', () => {
-        body.classList.toggle('dark-theme');
-        const theme = body.classList.contains('dark-theme') ? 'dark' : 'light';
-        localStorage.setItem('theme', theme);
-      });
-    </script>
-  </body>
+      try { win.opener = null; } catch(e) {}
+      win.location.href = url;
+      win.focus();
+    }
+  </script>
+</body>
 </html>
