--- a/edit-score.html
+++ b/edit-score.html
@@ -75,8 +75,8 @@
     <a href="saved-chats.html" title="Saved Chats"><img src="icons/chat.png" alt="Saved Chats" class="icon" /></a>
     <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
     <a href="Download-UI.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
+    <a href="more.html" class="more-link" title="More options" aria-label="More options">⋯</a>
 
-    <div style="margin: 12px 0;">...</div>
     <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
   </div>
 
