--- a/more.html
+++ b/more.html
@@ -73,7 +73,7 @@
     <a href="download-ui.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
 
     <!-- “…” More -->
-    <button id="more-btn" class="more-btn" aria-expanded="false" title="More">⋯</button>
+    <a href="more.html" class="more-link" title="More options" aria-label="More options">⋯</a>
     <nav id="more-menu" class="popup" role="menu" aria-hidden="true">
       <ul>
         <li><a href="more.html">More Options</a></li>
